--- a/ConfiguracionUsuarios/App.xaml
+++ b/ConfiguracionUsuarios/App.xaml
@@ -341,7 +341,7 @@
                         <ControlTemplate.Triggers>
                             <Trigger Property ="IsMouseOver" Value ="True">
                                 <Setter TargetName="LeftPart" Property="Fill" Value="#FF3296AF"/>
-                                <Setter TargetName="MiddlePart" Property="Fill" Value="Transparent"/>
+                                <!--<Setter TargetName="MiddlePart" Property="Fill" Value="Transparent"/>-->
                                 <Setter TargetName="RightPart" Property="Fill" Value="#FF3296AF"/>
                             </Trigger>
                             <Trigger Property ="IsEnabled" Value ="False">
