--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -36,7 +36,7 @@
                 <Image Source="/IngresoPedidos;component/Resources/key.png" Width="32" Height="32" />
             </Button>
 
-            <Button Grid.Column="0" Cursor="Hand" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected"  Name="btnADMIN" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontWeight="Bold" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left">
+            <Button Grid.Column="0" Cursor="Hand" MouseEnter="btnShowCaption" MouseLeave="btnShowSelected"  Name="btnADMIN" Style="{StaticResource hamburgerMenuButton}" Click="btnADMIN_Click"  Margin="0,0,0,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" FontWeight="Bold" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left">
                 <Image Source="/ConfiguracionUsuarios;component/Resources/compo.png" Width="32" Height="32" />
             </Button>
 
