--- a/ConfiguracionUsuarios/MainLogin.xaml
+++ b/ConfiguracionUsuarios/MainLogin.xaml
@@ -5,13 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ConfiguracionUsuarios"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid FocusManager.FocusedElement="{Binding ElementName=tbLegajo}" Background="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Border Background="LightGray" CornerRadius="10" Width="200" Height="200" />
-        <TextBox x:Name="tbLegajo" MaxLength="4" MaxLines="1" Text="LEGAJO" Margin="10,0,10,70" VerticalContentAlignment="Center" GotFocus="TbLegajo_GotFocus" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="1" Height="26" VerticalAlignment="Center" Width="150"/>
-        <PasswordBox x:Name="pbContraseña" MaxLength="8" Margin="10,10,10,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" GotFocus="PbContraseña_GotFocus" Password="--------" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Center" Width="150"/>
-        <Button x:Name="btnLogin" Click="btnLogin_Click" ToolTip="Ingresar" Content="Aceptar" Margin="0,100,0,0" TabIndex="3" VerticalAlignment="Center" HorizontalAlignment="Center" Width="70" Height="26"/>
-        <Label Content="SISTEMA DE REGISTROS DE PRODUCCION" Margin="0,0,0,300" VerticalAlignment="Center" FontWeight="Bold" FontSize="36" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+             d:DesignHeight="150" d:DesignWidth="200">
+    <Grid FocusManager.FocusedElement="{Binding ElementName=tbLegajo}" Background="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" Height="150">
+        <Border Background="#FF1885A1" CornerRadius="10" />
+        <TextBox x:Name="tbLegajo" MaxLength="4" MaxLines="1" Text="LEGAJO" Margin="0,25,0,0" VerticalContentAlignment="Center" GotFocus="TbLegajo_GotFocus" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" TabIndex="1" Height="26" VerticalAlignment="Top" Width="150" HorizontalAlignment="Center"/>
+        <PasswordBox x:Name="pbContraseña" MaxLength="8" Margin="0,65,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" GotFocus="PbContraseña_GotFocus" Password="--------" FontFamily="Consolas" FontSize="14" TabIndex="2" Height="26" VerticalAlignment="Top" Width="150" HorizontalAlignment="Center"/>
+        <Button x:Name="btnLogin" Click="btnLogin_Click" ToolTip="Ingresar" Content="Aceptar" Margin="0,0,0,10" TabIndex="3" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="70" Height="26"/>
+        <Label Content="SISTEMA DE REGISTROS DE PRODUCCION" Margin="0,0,0,250" VerticalAlignment="Center" FontWeight="Bold" FontSize="14" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
 
     </Grid>
 </UserControl>
